--- a/public/stylesheets/testgraph.css
+++ b/public/stylesheets/testgraph.css
@@ -89,6 +89,7 @@ span {
 	background-color: #444;
 	height: 120px;
 	width: 370px;
+	z-index: 1;
 	/*column-count: 2;*/
 	
 
@@ -179,6 +180,7 @@ span {
 svg#graph {
 	cursor: pointer;
 	position: absolute;
+	z-index: -1;
 	top: 100px;
 	left: 200px;
 }
